# brainplay-simulation

./: .env.template  .gitignore  Dockerfile.base  Dockerfile.frontend  README.md  docker-compose.yml  entrypoint.sh  start.sh
config/: game_config.yaml  llm_config.yaml  robot_config.yaml
frontend/: web_server.py
frontend/templates/: admin.html  index.html  players.html
isaac/: README.md  isaac_install.bat
src/codenames_game/: package.xml  setup.py
src/codenames_game/codenames_game/: __init__.py  game_logic.py  isaac_bridge_node.py  llm_client.py  orchestrator_node.py  player_node.py  similarity_model.py
src/codenames_game/launch/: 4_player_launch.py  isaac_launch.py
src/codenames_game/resource/: codenames_game
